2003-05-10  Gregory John Casamento <greg_casamento@yahoo.com>
	
	* GNUmakefile.preamble: Added to provide the -Werror parameter to 
	prevent any more warnings in the future.
	* GModelDecoder.m: Corrected code to eliminate warnings.
	* Gorm.m: Corrected code to eliminate warnings.
	* GormControlEditor.m: Corrected code to eliminate warnings.
	* GormDocument.h: Added some of the methods which were being
	used from outside of the class, but were never actually declared.
	* GormDocument.m: Corrected code to eliminate warnings.
	* GormGenericEditor.m: Corrected code to eliminate warnings.
	* GormImageEditor.m: Corrected code to eliminate warnings.
	* GormInternalViewEditor.m: Corrected code to eliminate warnings.
	* GormObjectEditor.m: Corrected code to eliminate warnings.
	* GormPrivate.h: Moved declarations of editor class methods around
	to prevent warnings.
	* GormSoundEditor.m: Corrected code to eliminate warnings.
	* GormViewEditor.m: Corrected code to eliminate warnings.
	* GormViewWithContentViewEditor.m: Corrected code to eliminate warnings.

2003-05-10  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Further improved the fix to the problem found
	yesterday.  The custom class code was issuing a RELEASE call to 
	all of the objects in the nameTable.   This was not necessary unless
	the object is a template object and was causing some issues with
	gorm file corruption.

2003-05-08  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Corrected a problem which was causing the 
	NSVisible array in the nameTable to become corrupted when 
	using custom classes.  Also added a NSDebugLog call to help
	find problems in the nameTable.
	
2003-05-07  Gregory John Casamento <greg_casamento@yahoo.com>

	Applied patch submitted by Rob Burns
	* GNUmakefile: Added FileIcon_gmodel.tiff.
	* GormInfo.plist: Added FileIcon_gmodel.tiff as default
	icon for gmodel files.
	
2003-04-30  Adam Fedor  <fedor@gnu.org>
